[package]
name = "c11_macro_system_proc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["macros", "metaprogramming", "dsl"]
categories = ["development-tools::testing"]
description = "Rust macro system learning module (unified declarative and procedural macros)"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
thiserror = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
c11_macro_system_proc_macros = { path = "./c11_macro_system_proc_macros" }

[dev-dependencies]
criterion = { workspace = true }
c11_macro_system_proc_macros = { path = "./c11_macro_system_proc_macros" }

[lib]
name = "c11_macro_system_proc"
path = "src/lib.rs"

[[bench]]
name = "performance_benchmarks"
harness = false
