[package]
name = "c11_middlewares"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.90"

[dependencies]
tokio = { workspace = true, optional = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

# Key-Value
redis = { version = "0.32.7", optional = true, default-features = false, features = ["aio", "tokio-comp"] }

# SQL Databases
tokio-postgres = { version = "0.7.14", optional = true }
postgres-types = { version = "0.2.10", optional = true }
mysql_async = { version = "0.34.2", optional = true }
rusqlite = { workspace = true, optional = true, features = ["bundled"] }

# Message Queues / Streams
async-nats = { version = "0.35.1", optional = true }
futures-util = { workspace = true, optional = true }
rdkafka = { version = "0.38.0", optional = true, default-features = false, features = ["cmake-build"] }
rumqttc = { version = "0.25.0", optional = true }

# Proxies / Networking
# 代理和网络库
# pingora 已移除，存在安全漏洞 (RUSTSEC-2025-0037, RUSTSEC-2025-0070)
nix = { version = "0.28.0", optional = true }

# High-performance async runtime
glommio = { version = "0.8", optional = true, features = ["native-tls"] }

[features]
default = []

# High-level toggles
full = [
    "kv-redis",
    "sql-postgres",
    "sql-mysql",
    "sql-sqlite",
    "mq-nats",
    "mq-kafka",
    "mq-mqtt",
    "proxy-nix",
    "tokio"
]

# Glommio high-performance runtime
glommio-full = [
    "kv-redis-glommio",
    "sql-postgres-glommio",
    "sql-mysql-glommio",
    "sql-sqlite-glommio",
    "mq-nats-glommio",
    "mq-kafka-glommio",
    "mq-mqtt-glommio",
    "proxy-nix-glommio",
    "glommio"
]

# Fine-grained feature flags per middleware
kv-redis = ["redis", "tokio"]
sql-postgres = ["tokio-postgres", "postgres-types", "tokio"]
sql-mysql = ["mysql_async", "tokio"]
sql-sqlite = ["rusqlite"]
mq-nats = ["async-nats", "futures-util"]
mq-kafka = ["rdkafka", "tokio"]
mq-mqtt = ["rumqttc", "tokio"]
proxy-nix = ["nix", "tokio"]
obs = ["tracing"]

# Glommio-specific feature flags
kv-redis-glommio = ["redis", "glommio"]
sql-postgres-glommio = ["tokio-postgres", "postgres-types", "glommio"]
sql-mysql-glommio = ["mysql_async", "glommio"]
sql-sqlite-glommio = ["rusqlite", "glommio"]
mq-nats-glommio = ["async-nats", "futures-util", "glommio"]
mq-kafka-glommio = ["rdkafka", "glommio"]
mq-mqtt-glommio = ["rumqttc", "glommio"]
proxy-nix-glommio = ["nix", "glommio"]

[dev-dependencies]
tracing-subscriber = { workspace = true }
[lib]
name = "c11_middlewares"
path = "src/lib.rs"

[[bin]]
name = "c11_middlewares"
path = "src/bin/main.rs"
