[package]
name = "c12_wasm"
version = "0.1.0"
edition = "2024"
resolver = "3"
rust-version = "1.96.0"
authors = ["Rust Learning Community"]
description = "Rust WebAssembly learning module"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/rust-lang-learning"

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { version = "0.3.77", features = ["console", "Window", "Document", "HtmlElement", "Storage", "Performance", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }

[dev-dependencies]
criterion = { workspace = true }

[lib]
name = "c12_wasm"
path = "src/lib.rs"

[[bench]]
name = "array_processing_bench"
harness = false

[[bench]]
name = "design_patterns_bench"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "string_operations_bench"
harness = false
