[package]
name = "c12_wasm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
keywords = ["wasm", "webassembly", "browser"]
categories = ["wasm", "web-programming"]
description = "Rust WebAssembly learning module"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
common = { workspace = true, features = ["serde", "error-trait", "async"] }
thiserror = { workspace = true }
wasm-bindgen = { workspace = true }
js-sys = { workspace = true }
wasm-bindgen-futures = { workspace = true }
# 2026-06-25: web-sys 0.3.102 -> 0.3.103
web-sys = { version = "0.3.103", features = ["console", "Window", "Document", "HtmlElement", "Storage", "Performance", "Request", "RequestInit", "RequestMode", "Response", "Headers"] }

[lints.rust]
unsafe_code = "allow"
missing_docs = "allow"

[lints.clippy]
borrowed_box = "deny"
non_minimal_cfg = "deny"

[dev-dependencies]
criterion = { workspace = true }

[lib]
name = "c12_wasm"
path = "src/lib.rs"

[[bench]]
name = "array_processing_bench"
harness = false

[[bench]]
name = "design_patterns_bench"
harness = false

[[bench]]
name = "performance_benchmarks"
harness = false

[[bench]]
name = "string_operations_bench"
harness = false
