[package]
name = "c13_embedded"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Rust bare-metal embedded systems learning module"
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["embedded", "bare-metal", "no-std", "microcontroller"]
categories = ["embedded", "no-std"]

[dependencies]
# C++ 互操作（可选）
cxx = { version = "1.0.198", optional = true }

# 仅在 ARM 嵌入式目标下启用真实硬件依赖
# host 环境 (x86_64 Windows) 下不使用这些依赖，确保 cargo check 通过
[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = { workspace = true }
cortex-m-rt = { workspace = true }
panic-halt = { workspace = true }
volatile-register = { workspace = true }

[build-dependencies]
bindgen = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[lib]
name = "c13_embedded"
path = "src/lib.rs"

[[bin]]
name = "embedded_demo"
path = "src/main.rs"

[[bench]]
name = "embedded_benchmarks"
harness = false

[features]
default = []
# embedded feature 用于在 ARM 目标下启用硬件相关代码路径
embedded = []
# cxx 互操作支持
cxx-interop = ["dep:cxx"]

[lints.rust]
# bare-metal 编程必须允许 unsafe 代码（内存映射寄存器、原始指针操作）
unsafe_code = "allow"
missing_docs = "allow"
# 声明 nightly 预览模块使用的自定义 cfg，避免 unexpected_cfgs 警告
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(nightly)', 'cfg(kani)'] }

[lints.clippy]
borrowed_box = "deny"
manual_div_ceil = "deny"
non_minimal_cfg = "deny"
