[package]
name = "c13_microservice"
version = "0.1.0"
edition = "2021"
authors = ["Rust Microservice Team"]
description = "现代Rust微服务框架集合，支持多种Web框架、gRPC、服务网格和云原生部署"
license = "MIT"
repository = "https://github.com/rust-lang/c13_microservice"
keywords = ["microservice", "rust", "web", "grpc", "kubernetes", "async"]
categories = ["web-programming", "network-programming"]

# 移除工作区配置以避免冲突

[features]
default = []
with-redis = ["dep:redis"]
with-rabbitmq = ["dep:lapin"]
with-diesel = ["dep:diesel"]
grpc-generated = []
# 一键启用"独立构建"所需的重依赖
standalone = ["with-redis", "with-rabbitmq", "with-diesel"]

[dependencies]
# 异步运行时
tokio = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

# Web框架
axum = { workspace = true }
actix-web = { version = "4.11", features = ["macros"] }
warp = "0.4"
tide = "0.16"

# gRPC框架
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }

# 数据库（可选，standalone 特性启用）- 使用工作区统一版本
diesel = { version = "2.1", features = ["postgres", "mysql", "chrono", "uuid"], optional = true }

# 配置管理 - 使用工作区统一版本
config = { workspace = true }
dotenvy = "0.15"

# 日志和追踪 - 使用工作区统一版本
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# OpenTelemetry 相关按需启用，避免依赖膨胀
log = { workspace = true }
slog = "2.7"
slog-stdlog = "4.1"
slog-scope = "4.4"

# 监控和指标 - 使用工作区统一版本
prometheus = "0.14"
metrics = "0.24"
metrics-exporter-prometheus = "0.17"

# 消息队列（可选，standalone/with-redis/with-rabbitmq 启用）- 更新到最新版本
redis = { version = "0.32.5", features = ["tokio-comp", "connection-manager"], optional = true }
lapin = { version = "2.5", optional = true }

# 认证和授权 - 更新到最新版本
jsonwebtoken = "9.3"
oauth2 = "5.0"
argon2 = "0.5"
uuid = { workspace = true }

# HTTP客户端 - 使用工作区统一版本
reqwest = { workspace = true }
hyper = { workspace = true }

# Tower中间件支持 - 使用工作区统一版本
tower = { workspace = true }
tower-http = { workspace = true }

# 时间处理 - 使用工作区统一版本
chrono = { workspace = true }
time = { workspace = true }

# 压缩支持
flate2 = "1.0"

# 错误处理 - 使用工作区统一版本
anyhow = { workspace = true }
thiserror = { workspace = true }
eyre = "0.6"

# CLI - 更新到最新版本
clap = { version = "4.5", features = ["derive"] }

# 测试 - 使用工作区统一版本
tokio-test = "0.4"
mockall = { workspace = true }
async-trait = "0.1"

env_logger = "0.11"
pretty_env_logger = "0.5"

[build-dependencies]
tonic-build = { workspace = true }
prost-build = { workspace = true }
protoc-bin-vendored = "3"

[dev-dependencies]
tokio-test = "0.4"
mockall = { workspace = true }
tempfile = "3.10"
criterion = { workspace = true, features = ["html_reports"] }
futures = { workspace = true }

[lib]
name = "c13_microservice"
path = "src/lib.rs"

[[bin]]
name = "microservice-server"
path = "src/bin/main.rs"

[[example]]
name = "simple_axum"
path = "examples/simple_axum.rs"

[[example]]
name = "grpc_service"
path = "examples/grpc_service.rs"

[[example]]
name = "volo_rpc_service"
path = "examples/volo_rpc_service.rs"

[[example]]
name = "opentelemetry_demo"
path = "examples/opentelemetry_demo.rs"

[[example]]
name = "orm_demo"
path = "examples/orm_demo.rs"

[[example]]
name = "messaging_demo"
path = "examples/messaging_demo.rs"

[[example]]
name = "discovery_demo"
path = "examples/discovery_demo.rs"

[[example]]
name = "comprehensive_observability_demo"
path = "examples/comprehensive_observability_demo.rs"

[[example]]
name = "simple_observability_demo"
path = "examples/simple_observability_demo.rs"

[[example]]
name = "standalone_observability_demo"
path = "examples/standalone_observability_demo.rs"

[[example]]
name = "local_logging_demo"
path = "examples/local_logging_demo.rs"

[[example]]
name = "integrated_logging_demo"
path = "examples/integrated_logging_demo.rs"

[[example]]
name = "grpc_client_demo"
path = "examples/grpc_client_demo.rs"

[[example]]
name = "messaging_advanced_demo"
path = "examples/messaging_advanced_demo.rs"

[[example]]
name = "advanced_grpc_demo"
path = "examples/advanced_grpc_demo.rs"

[[example]]
name = "middleware_demo"
path = "examples/middleware_demo.rs"
