[package]
name = "c13_reliability"
version = "0.1.0"
edition = "2024"

resolver = "3"
rust-version = "1.90"
authors = ["Rust Reliability Team"]
description = "统一可靠性框架：错误处理、容错机制、运行时监控和自愈"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rust-lang/c13_reliability"
keywords = ["reliability", "error-handling", "fault-tolerance", "monitoring", "resilience"]
categories = ["error-handling", "development-tools::testing"]

[dependencies]
# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# OpenTelemetry 支持 - 2025年最新版本
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-stdout = { workspace = true, optional = true }
opentelemetry-proto = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

# 异步支持
tokio = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
async-trait = { workspace = true, optional = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 并发和同步
parking_lot = { workspace = true, optional = true }
dashmap = { workspace = true, optional = true }
crossbeam = { workspace = true, optional = true }

# 时间处理
chrono = { workspace = true }
tokio-util = { workspace = true }

# 指标和监控
metrics = { workspace = true, optional = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
prometheus = { workspace = true, optional = true }

# 配置管理
config = { workspace = true }
toml = { workspace = true }

# 网络和HTTP
reqwest = { workspace = true }
url = { workspace = true }

# 随机数生成
rand = { workspace = true }

# 日志记录
env_logger = { version = "0.10", optional = true }

# 属性测试
proptest = { workspace = true, optional = true }

# 系统信息
sysinfo = { version = "0.30", optional = true }

# 内存管理
jemallocator = { version = "0.5", optional = true }

# UUID 支持
uuid = { workspace = true }

# 时间处理增强
time = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["async"] }
tokio-test = { workspace = true }

[features]
default = ["std", "async", "monitoring", "fault-tolerance", "otlp", "logging"]
std = []
async = ["tokio", "futures", "async-trait"]
monitoring = ["metrics", "metrics-exporter-prometheus", "sysinfo", "prometheus"]
fault-tolerance = ["parking_lot", "dashmap", "crossbeam"]
chaos-engineering = ["proptest"]
jemalloc = ["jemallocator"]
otlp = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "tracing-opentelemetry"]
otlp-stdout = ["opentelemetry-stdout"]
otlp-proto = ["opentelemetry-proto"]
logging = ["env_logger"]

[[bench]]
name = "reliability_benchmarks"
harness = false
